#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_INIT([pacstack-tests], [0.1],
		[https://github.com/pointer-authentication/pacstack-tests/issues],
		[pacstack-tests],
		[https://github.com/pointer-authentication/pacstack-tests])
AM_INIT_AUTOMAKE([foreign subdir-objects])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

# Created configuration files.
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
